<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Software Foundation Fiji</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello World</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="take_photo">Take a Photo</string>
    <string name="upload_server">Upload</string>
    <string name="uploaded">Successfully uploaded</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="content">Image Receipt</string>
    <string name="renewal_message">Please take photograph of Receipt. Press <b>Continue</b> to take photograph.</string>
    <string name="renewal_yes">Continue</string>
    <string name="renewal_no">Cancel</string>
    <string name="trialexp">Your 30 day trial has expired. Please renew your subscription</string>
    <string name="accept">OK</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Personal Profile</item>
        <item >Membership Details</item>
        <item >Events</item>
        <item >Facebook Feeds</item>
        <item >Gallery</item>
        <item >News And Announcements</item>
        <item >Videos</item>
        <item >About</item>
        <item >Logout</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/personal</item>
        <item>@mipmap/member</item>
        <item>@mipmap/event</item>
        <item>@mipmap/ic_facebook</item>
        <item>@mipmap/pics</item>
        <item>@mipmap/news</item>
        <item>@mipmap/video</item>
        <item>@mipmap/about</item>
        <item>@mipmap/logout</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Addition frm last update -->

    <string name="header">Software Foundation FIji</string>
    <string name="enter_firstname">First Name</string>
    <string name="enter_lastname">Last Name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pass">Please enter the email address you register. New Password will be emailed to registered users. Please change the password when you login.</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgt_pass">Forgot Password?</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_back">Back</string>
    <string name="btn_cal_BMI">Calculate BMI</string>
    <string name="btn_register">Register</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="town">Town</string>
    <string name="gender">Gender</string>
    <string name="btn_save">Save</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="Login"></string>
    <string name="logText">Login or Register if new user</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
  

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Date time picker START POINT -->
    <string name="cur_date"> (M-D-YYYY): </string>
    <string name="ch_label">Date of Birth</string>
    <!-- date time picker END POINT -->
    
    <string-array name="member_opt">
        <item>Student Member</item>
        <item>Professional Member</item>
        <item>Senior Member</item>
        <item>Organizational Member</item>
    </string-array>
    <string-array name="secret_quest">
        <item>Mother\' birth-place</item>
        <item>Childhood best friend</item>
        <item>Name of first pet</item>
        <item>Favourite teacher</item>
        <item>Favourite historical person</item>
        <item>Grandfather\' occupation</item>
    </string-array>

    <string name="log">Login</string>
    <string name="or">or</string>
    <string name="reg">Register if New User</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- End -->
    <string name="member_title">member_title</string>
    <string name="membership_detail">Membership Detail</string>

</resources>
