<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@mipmap/screen_a">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_height="fill_parent"
                android:id="@+id/date_layer">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/changePass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_x="75dp"
                        android:layout_y="22dp"
                        android:text="Change Password"
                        android:textColor="@color/titles"
                        android:textSize="30dip"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/OldPass"
                        style="@style/Round_text"
                        android:layout_width="250dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="30dp"
                        android:layout_x="39dp"
                        android:layout_y="73dp"
                        android:ems="10"
                        android:hint="@string/old_pass"
                        android:singleLine="true"
                        android:textColor="@color/midnight"
                        android:password="true"
                        android:layout_gravity="center_horizontal">

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/NewPass"
                        style="@style/Round_text"
                        android:layout_width="247dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="30dp"
                        android:layout_x="37dp"
                        android:layout_y="154dp"
                        android:ems="10"
                        android:hint="@string/new_pass"
                        android:singleLine="true"
                        android:textColor="@color/midnight"
                        android:password="true"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ConfirmPass"
                        style="@style/Round_text"
                        android:layout_width="247dp"
                        android:layout_height="56dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_x="34dp"
                        android:layout_y="226dp"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:singleLine="true"
                        android:textColor="@color/midnight"
                        android:password="true"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/save_details"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:padding="10dip"
                    android:textColor="#e30000"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:id="@+id/btn2"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnBack"
                        style="@style/button"
                        android:layout_width="78dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/btn_back"
                        android:layout_gravity="center_vertical" />

                    <Button
                        android:id="@+id/btnSavePassword"
                        style="@style/button"
                        android:layout_width="78dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="Save"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
