<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@mipmap/screen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/editProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:text="Edit Profile"
                android:textSize="30dip"
                android:textStyle="bold"
                android:textColor="@color/titles"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_height="fill_parent"
                android:id="@+id/date_layer">




                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer8">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="First Name"
                        android:textColor="@color/titles"
                        android:id="@+id/textView8"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditFName"
                        android:hint="Enter First Name"
                        android:singleLine="true"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer18">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Last Name"
                        android:textColor="@color/titles"
                        android:id="@+id/textView18"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditLastName"
                        android:singleLine="true"
                        android:hint="Enter Last Name"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer28">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Email"
                        android:textColor="@color/titles"
                        android:id="@+id/textView28"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditEmail"
                        android:hint="@string/enter_email"
                        android:singleLine="true"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer38">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Town"
                        android:textColor="@color/titles"
                        android:id="@+id/textView238"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditTown"
                        android:hint="@string/town"
                        android:singleLine="true"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer248">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Country"
                        android:textColor="@color/titles"
                        android:id="@+id/textView248"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditCountry"
                        android:singleLine="true"
                        android:hint="@string/country"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer258">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Post Code"
                        android:textColor="@color/titles"
                        android:id="@+id/textVie48"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditPostal"
                        android:hint="Enter Post Code"
                        android:singleLine="true"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer268">


                    <TextView
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Mobile"
                        android:textColor="@color/titles"
                        android:id="@+id/textView268"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Round_text"
                        android:id="@+id/EditMobile"
                        android:hint="Enter Phone Number"
                        android:singleLine="true"
                        android:inputType="number"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/layer08">


                    <Button
                        android:id="@+id/btnBack"
                        android:background="@color/btn2"
                        android:textColor="@color/round"
                        android:textSize="15dp"
                        android:padding="15dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:layout_weight="1"
                        android:text="Back"  />

                    <Button
                        android:id="@+id/btnSavePassword"
                        android:background="@color/btn2"
                        android:textColor="@color/round"
                        android:textSize="15dp"
                        android:padding="15dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:layout_weight="1"
                        android:text="Save"  />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
